--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <p>Como diferentes tipos de jogos influenciam nossa ansiedade e bem-estar emocional</p>
       <div class="hero-buttons">
         <a href="#jogos" class="btn primary">Explorar Catálogo</a>
-        <a href="pesquisa-completa.pdf" class="btn secondary" target="_blank">
+        <a href="relatorio.pdf" class="btn secondary" target="_blank">
           <i class="fas fa-file-pdf"></i> Ver Pesquisa Completa
         </a>
       </div>
